JSW Devsb/src/objects/NSR_PRFT_Values__c.object
<CustomObject>
    <fields>
        <fullName>Code_Formula__c</fullName>
        <formula>MFG_Plant__c +&apos;:&apos;+Plant__c +&apos;:&apos;+  Storage_Location__c +&apos;:&apos;+ Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFG_Plant__c</fullName>
        <label>MFG Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRFT_Value__c</fullName>
        <label>PRFT Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <referenceTo>Plant_Master__c</referenceTo>
        <relationshipLabel>NSR PRFT Values</relationshipLabel>
        <relationshipName>NSR_PRFT_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NSR PRFT Values</relationshipLabel>
        <relationshipName>NSR_PRFT_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Processed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>To Be Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>NSR PRFT Values</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRFT-{00000000}</displayFormat>
        <label>NSR PRFT Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSR PRFT Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>